[package]
name = "wblna_optim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
indicatif = "0.18"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
lto = "fat"

[profile.release.build-override]
opt-level = 3
